# cmake-with-git-metadata

./: CMakeLists.txt  README.md  main.cpp
GetGitRev/: GetGitRevisionDescription.cmake
version/: version.c  version.c.in  version.h
